CHANGES IN VERSION 1.13.0
------------------------

BUG FIXES

    o (1.13.2) Aaron's corrections to setExperimentHubOptions.

USER-VISIBLE CHANGES

    o (1.13.1) Match ERROR message when resource not found in database. Instead
    of a generic "unknown key" give more detailed information. This is
    consistent with AnnotationHub/Hub-classes. If resource hasn't been
    completely removed from database, gives when the resource was removed. If
    the resource is available but after the snapshot date being utilized,
    specialized message.

CHANGES IN VERSION 1.11.0
------------------------

NEW FEATURES

    o (1.11.2) system environment variable to control localHub option for
    creating hub based only on previously downloaded resources
    o (1.11.5) With change in AnnotationHub. All force redownload of Hub sqlite
    file with refreshHub 

BUG FIXES

    o (1.11.2) Fix localHub when no internet connection.  The internal use of
    isDevel was preventing Hub creation when no internet connection. Fixed by
    checking connection. This code pretained to orgDb filters


CHANGES IN VERSION 1.9.0
------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o (1.9.2) The Hubs have been updated to use BiocFileCache as a backend
    utility for managing and downloading resources. This allows for file
    specific caching mechanism. This change is a significant user change as it
    changed the default directories for the Hubs (AnnotationHub/ExperimentHub)
    as well as the base directory no longer being hidden.


CHANGES IN VERSION 1.4.0
------------------------

NEW FEATURES

    o ExperimentHub will now work offline utilizing argument 'localHub'; will
    also use this option automatically if no internet connection is detected.

    o Add new vignette for creating ExperimentHub packages

MODIFICATIONS

    o Update AnnotationHub dependency; new resource class RDSResource

    o move listResources and loadResources from AnnotationHub to here

BUG FIXES
