@@ -1,7 +1,7 @@
 Package: ExperimentHub
 Type: Package
 Title: Client to access ExperimentHub resources
-Version: 1.13.3
+Version: 1.13.4
 Author: Bioconductor Package Maintainer <maintainer@bioconductor.org>
 Maintainer: Bioconductor Package Maintainer <maintainer@bioconductor.org>
 Description: This package provides a client for the Bioconductor
@@ -12,7 +12,7 @@ Description: This package provides a client for the Bioconductor
         retrieved enabling quick and reproducible access.
 License: Artistic-2.0
 biocViews: Infrastructure, DataImport, GUI, ThirdPartyClient
-Depends: methods, BiocGenerics (>= 0.15.10), AnnotationHub (>= 2.17.9), BiocFileCache (>= 1.5.1)
+Depends: methods, BiocGenerics (>= 0.15.10), AnnotationHub (>= 2.19.2), BiocFileCache (>= 1.5.1)
 Imports: utils, S4Vectors, BiocManager, curl, rappdirs
 Suggests: knitr, BiocStyle
 Enhances: ExperimentHubData
